quiz title and brief rules

--- a/index.html
+++ b/index.html
@@ -26,6 +26,28 @@
 
         </header>
 
+        <!-- Coding Challenge Title -->
+        <section id="title-section" class="show">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>Coding Quiz Challenge</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <p>Try and answer the following code-related questions within the time limit. Keep in mind that
+                        incorrect answers will penalize your your score time by 10 seconds!</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <button id="startButton">Start Quiz</button>
+                </div>
+            </div>
+        </section>
+
+    
+
         <script type="text/javascript" src="./resources/js/questions.js"></script>
         <script type="text/javascript" src="./resources/js/script.js"></script>
         <script type="text/javascript" src="./resources/js/scores.js"></script>
