--- a/index.html
+++ b/index.html
@@ -57,7 +57,18 @@
                 <div id="feedback" class="feedback hide"></div>
             </div>
         </section>
-
+        <!-- High Score section -->
+        <section id="highscore-section" class="hide">
+            <div class="row">
+                <div id="high-score" class="col-md-12">
+                    <h2>All done!</h2>
+                    <h3>Your final score is <span id="final-score">0</span></h3>
+                    <label for="initials-area">Enter initials:</label>
+                    <input type="text" name="initials-area" maxlength="4" id="initials">
+                    <button id="submit-button" type="submit">Submit</button>
+                </div>
+            </div>
+        </section>
         <script type="text/javascript" src="./resources/js/questions.js"></script>
         <script type="text/javascript" src="./resources/js/script.js"></script>
         <script type="text/javascript" src="./resources/js/scores.js"></script>
